NOJIRA: Java 17 og diverse oppgraderte dependencies